tests/invalid/precedence_syntax_over_key.nano
..
    bad.key value
second root
